# pyMEAN

./: .gitignore  README.md  setup.cfg
pymean/: __init__.py  enrichment.py
pymean/utils/: __init__.py  get_data.py  get_smpdb.py  kegg_prep.py
pymetaborichanalysis/: doAnalysis.py
pymetaborichanalysis/utils/: get_kegg.py  keggPrep.py
