[metadata]
name = pymean
author = Keiron O'Shea
description = The pyMEAN package is designed to facilitate semi-automated enrichment analysis for metabolomic experiments.
version = 0.30
url = https://github.com/AberystwythSystemsBiology/pyMEAN
keywords =
  metabolomics
  enrichment analysis
  omics
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  pandas
  numpy
  statsmodels
  scipy
